--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ pretty_assertions = "1.4.0"
 regex = "1.10.2"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-
+serde = { version = "1.0.193", features = ["derive"] }
+serde-enum-str = "0.4.0"
 
