--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-enum-str = "0.4.0"
+itertools = "0.12.0"
 
