--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+assert_unordered = "0.3.5"
 
 [dependencies]
 tracing = "0.1.40"
@@ -14,4 +15,4 @@ tracing-subscriber = "0.3.18"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-enum-str = "0.4.0"
 itertools = "0.12.0"
-
+rangemap = "1.4.0"
