--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde-enum-str = "0.4.0"
 itertools = "0.12.0"
 rangemap = "1.4.0"
+rayon = "1.8.0"
