--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ tracing-subscriber = "0.3.18"
 serde = { version = "1.0.193", features = ["derive"] }
 serde-enum-str = "0.4.0"
 itertools = "0.12.0"
-
+rayon = "1.8.0"
