--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dev-dependencies]
 pretty_assertions = "1.4.0"
 assert_unordered = "0.3.5"
+tracing-test = "0.2.4"
 
 [dependencies]
 tracing = "0.1.40"
