--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 pretty_assertions = "1.4.0"
 assert_unordered = "0.3.5"
 tracing-test = "0.2.4"
+test-log = { version = "0.2.14", features = ["trace"]}
 
 [dependencies]
 tracing = "0.1.40"
